fix pop up image too big

--- a/src/assets/css/content.css
+++ b/src/assets/css/content.css
@@ -239,5 +239,6 @@
 .modal--content__image {
   object-fit: contain;
   min-width: 300px;
+  width: 300px;
   height: 400px;
 }
